hw3/code/y.output
Grammar

    0 $accept: sql $end

    1 sql: base_table_def
    2    | insert_statement
    3    | QUIT_T

    4 base_table_def: CREATE_T TABLE_T NAME '(' base_table_element_list ')'

    5 base_table_element_list: base_table_element
    6                        | base_table_element_list ',' base_table_element

    7 base_table_element: column_def

    8 column_def: NAME data_type

    9 data_type: CHAR_T '(' INT_VAL_T ')'
   10          | INT_T
   11          | FLOAT_T

   12 insert_statement: INSERT_T INTO_T NAME VALUES_T '(' column_value_list ')'

   13 column_value_list: atom_value
   14                  | column_value_list ',' atom_value

   15 atom_value: INT_VAL_T
   16           | FLOAT_VAL_T
   17           | CHAR_VAL_T


Terminals, with rules where they appear

$end (0) 0
'(' (40) 4 9 12
')' (41) 4 9 12
',' (44) 6 14
error (256)
QUIT_T (258) 3
CREATE_T (259) 4
TABLE_T (260) 4
NAME (261) 4 8 12
INT_VAL_T (262) 9 15
FLOAT_VAL_T (263) 16
CHAR_VAL_T (264) 17
CHAR_T (265) 9
INT_T (266) 10
FLOAT_T (267) 11
INSERT_T (268) 12
INTO_T (269) 12
VALUES_T (270) 12


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
sql (20)
    on left: 1 2 3, on right: 0
base_table_def (21)
    on left: 4, on right: 1
base_table_element_list (22)
    on left: 5 6, on right: 4 6
base_table_element (23)
    on left: 7, on right: 5 6
column_def (24)
    on left: 8, on right: 7
data_type (25)
    on left: 9 10 11, on right: 8
insert_statement (26)
    on left: 12, on right: 2
column_value_list (27)
    on left: 13 14, on right: 12 14
atom_value (28)
    on left: 15 16 17, on right: 13 14


state 0

    0 $accept: . sql $end

    QUIT_T    shift, and go to state 1
    CREATE_T  shift, and go to state 2
    INSERT_T  shift, and go to state 3

    sql               go to state 4
    base_table_def    go to state 5
    insert_statement  go to state 6


state 1

    3 sql: QUIT_T .

    $default  reduce using rule 3 (sql)


state 2

    4 base_table_def: CREATE_T . TABLE_T NAME '(' base_table_element_list ')'

    TABLE_T  shift, and go to state 7


state 3

   12 insert_statement: INSERT_T . INTO_T NAME VALUES_T '(' column_value_list ')'

    INTO_T  shift, and go to state 8


state 4

    0 $accept: sql . $end

    $end  shift, and go to state 9


state 5

    1 sql: base_table_def .

    $default  reduce using rule 1 (sql)


state 6

    2 sql: insert_statement .

    $default  reduce using rule 2 (sql)


state 7

    4 base_table_def: CREATE_T TABLE_T . NAME '(' base_table_element_list ')'

    NAME  shift, and go to state 10


state 8

   12 insert_statement: INSERT_T INTO_T . NAME VALUES_T '(' column_value_list ')'

    NAME  shift, and go to state 11


state 9

    0 $accept: sql $end .

    $default  accept


state 10

    4 base_table_def: CREATE_T TABLE_T NAME . '(' base_table_element_list ')'

    '('  shift, and go to state 12


state 11

   12 insert_statement: INSERT_T INTO_T NAME . VALUES_T '(' column_value_list ')'

    VALUES_T  shift, and go to state 13


state 12

    4 base_table_def: CREATE_T TABLE_T NAME '(' . base_table_element_list ')'

    NAME  shift, and go to state 14

    base_table_element_list  go to state 15
    base_table_element       go to state 16
    column_def               go to state 17


state 13

   12 insert_statement: INSERT_T INTO_T NAME VALUES_T . '(' column_value_list ')'

    '('  shift, and go to state 18


state 14

    8 column_def: NAME . data_type

    CHAR_T   shift, and go to state 19
    INT_T    shift, and go to state 20
    FLOAT_T  shift, and go to state 21

    data_type  go to state 22


state 15

    4 base_table_def: CREATE_T TABLE_T NAME '(' base_table_element_list . ')'
    6 base_table_element_list: base_table_element_list . ',' base_table_element

    ')'  shift, and go to state 23
    ','  shift, and go to state 24


state 16

    5 base_table_element_list: base_table_element .

    $default  reduce using rule 5 (base_table_element_list)


state 17

    7 base_table_element: column_def .

    $default  reduce using rule 7 (base_table_element)


state 18

   12 insert_statement: INSERT_T INTO_T NAME VALUES_T '(' . column_value_list ')'

    INT_VAL_T    shift, and go to state 25
    FLOAT_VAL_T  shift, and go to state 26
    CHAR_VAL_T   shift, and go to state 27

    column_value_list  go to state 28
    atom_value         go to state 29


state 19

    9 data_type: CHAR_T . '(' INT_VAL_T ')'

    '('  shift, and go to state 30


state 20

   10 data_type: INT_T .

    $default  reduce using rule 10 (data_type)


state 21

   11 data_type: FLOAT_T .

    $default  reduce using rule 11 (data_type)


state 22

    8 column_def: NAME data_type .

    $default  reduce using rule 8 (column_def)


state 23

    4 base_table_def: CREATE_T TABLE_T NAME '(' base_table_element_list ')' .

    $default  reduce using rule 4 (base_table_def)


state 24

    6 base_table_element_list: base_table_element_list ',' . base_table_element

    NAME  shift, and go to state 14

    base_table_element  go to state 31
    column_def          go to state 17


state 25

   15 atom_value: INT_VAL_T .

    $default  reduce using rule 15 (atom_value)


state 26

   16 atom_value: FLOAT_VAL_T .

    $default  reduce using rule 16 (atom_value)


state 27

   17 atom_value: CHAR_VAL_T .

    $default  reduce using rule 17 (atom_value)


state 28

   12 insert_statement: INSERT_T INTO_T NAME VALUES_T '(' column_value_list . ')'
   14 column_value_list: column_value_list . ',' atom_value

    ')'  shift, and go to state 32
    ','  shift, and go to state 33


state 29

   13 column_value_list: atom_value .

    $default  reduce using rule 13 (column_value_list)


state 30

    9 data_type: CHAR_T '(' . INT_VAL_T ')'

    INT_VAL_T  shift, and go to state 34


state 31

    6 base_table_element_list: base_table_element_list ',' base_table_element .

    $default  reduce using rule 6 (base_table_element_list)


state 32

   12 insert_statement: INSERT_T INTO_T NAME VALUES_T '(' column_value_list ')' .

    $default  reduce using rule 12 (insert_statement)


state 33

   14 column_value_list: column_value_list ',' . atom_value

    INT_VAL_T    shift, and go to state 25
    FLOAT_VAL_T  shift, and go to state 26
    CHAR_VAL_T   shift, and go to state 27

    atom_value  go to state 35


state 34

    9 data_type: CHAR_T '(' INT_VAL_T . ')'

    ')'  shift, and go to state 36


state 35

   14 column_value_list: column_value_list ',' atom_value .

    $default  reduce using rule 14 (column_value_list)


state 36

    9 data_type: CHAR_T '(' INT_VAL_T ')' .

    $default  reduce using rule 9 (data_type)
